crates/red_knot_python_semantic/resources/mdtest/snapshots/for.md_-_For_loops_-_`__iter__`_returns_an_iterator_with_an_invalid_`__next__`_method.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: for.md - For loops - `__iter__` returns an iterator with an invalid `__next__` method
mdtest path: crates/red_knot_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import reveal_type
 2 | 
 3 | class Iterator:
 4 |     def __next__(self, extra_arg) -> int:
 5 |         return 42
 6 | 
 7 | class Iterable:
 8 |     def __iter__(self) -> Iterator:
 9 |         return Iterator()
10 | 
11 | # error: [not-iterable]
12 | for x in Iterable():
13 |     reveal_type(x)  # revealed: int
```

# Diagnostics

```
error: lint:not-iterable
  --> /src/mdtest_snippet.py:12:10
   |
11 | # error: [not-iterable]
12 | for x in Iterable():
   |          ^^^^^^^^^^ Object of type `Iterable` is not iterable because its `__iter__` method returns an object of type `Iterator`, which has an invalid `__next__` method (expected `def __next__(self): ...`)
13 |     reveal_type(x)  # revealed: int
   |

```

```
info: revealed-type
  --> /src/mdtest_snippet.py:13:5
   |
11 | # error: [not-iterable]
12 | for x in Iterable():
13 |     reveal_type(x)  # revealed: int
   |     -------------- info: Revealed type is `int`
   |

```
